--- a/login.html
+++ b/login.html
@@ -2,27 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>TravelTour - Login & Register</title>
+  <title>Login - TravelTour</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
   <style>
     body {
       background: url('https://source.unsplash.com/1600x900/?travel,landscape') no-repeat center center fixed;
       background-size: cover;
     }
-
     .card {
       backdrop-filter: blur(10px);
       background-color: rgba(255, 255, 255, 0.9);
     }
-
     .form-control:focus {
       box-shadow: none;
       border-color: #0d6efd;
-    }
-
-    .nav-pills .nav-link.active {
-      background-color: #0d6efd;
     }
   </style>
 </head>
@@ -32,84 +25,39 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card p-4 shadow">
-        <h3 class="text-center mb-4 fw-bold">Welcome to TravelTour</h3>
+        <h3 class="text-center mb-4 fw-bold">Login to TravelTour</h3>
 
-        <!-- Nav tabs -->
-        <ul class="nav nav-pills nav-justified mb-3" id="authTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="login-tab" data-bs-toggle="pill" data-bs-target="#loginTab" type="button" role="tab">Login</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="register-tab" data-bs-toggle="pill" data-bs-target="#registerTab" type="button" role="tab">Register</button>
-          </li>
-        </ul>
-
-        <!-- Tab Content -->
-        <div class="tab-content">
-          <!-- Login Tab -->
-          <div class="tab-pane fade show active" id="loginTab" role="tabpanel">
-            <form id="loginForm">
-              <div class="mb-3">
-                <label for="loginEmail" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="loginEmail" required>
-              </div>
-              <div class="mb-3">
-                <label for="loginPwd" class="form-label">Password</label>
-                <input type="password" class="form-control" id="loginPwd" required>
-              </div>
-              <div class="form-check mb-3">
-                <input class="form-check-input" type="checkbox" id="remember">
-                <label class="form-check-label" for="remember">Remember me</label>
-              </div>
-              <button type="submit" class="btn btn-primary w-100">Login</button>
-              <a href="index.html" class="btn btn-outline-secondary d-block text-center mt-3">← Back to Homepage</a>
-
-            </form>
+        <form id="loginForm">
+          <div class="mb-3">
+            <label for="loginEmail" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="loginEmail" required>
           </div>
-
-          <!-- Register Tab -->
-          <div class="tab-pane fade" id="registerTab" role="tabpanel">
-            <form id="registerForm">
-              <div class="mb-3">
-                <label for="regName" class="form-label">Full Name</label>
-                <input type="text" class="form-control" id="regName" required>
-              </div>
-              <div class="mb-3">
-                <label for="regEmail" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="regEmail" required>
-              </div>
-              <div class="mb-3">
-                <label for="regPwd" class="form-label">Password</label>
-                <input type="password" class="form-control" id="regPwd" required>
-              </div>
-              <button type="submit" class="btn btn-success w-100">Register</button>
-          
-            </form>
+          <div class="mb-3">
+            <label for="loginPwd" class="form-label">Password</label>
+            <input type="password" class="form-control" id="loginPwd" required>
           </div>
-        </div>
+          <div class="form-check mb-3">
+            <input class="form-check-input" type="checkbox" id="remember">
+            <label class="form-check-label" for="remember">Remember me</label>
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Login</button>
+          <a href="index.html" class="btn btn-outline-secondary d-block text-center mt-3">← Back to Homepage</a>
+          <a href="register.html" class="d-block text-center mt-2">Don't have an account? Register here</a>
+        </form>
+
       </div>
     </div>
   </div>
 </div>
 
-<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- JS Logic -->
 <script>
   document.getElementById("loginForm").addEventListener("submit", function (e) {
     e.preventDefault();
     const email = document.getElementById("loginEmail").value;
     const username = email.split('@')[0];
     localStorage.setItem("loggedInUser", username);
-    window.location.href = "index.html"; // or dashboard.html
-  });
-
-  document.getElementById("registerForm").addEventListener("submit", function (e) {
-    e.preventDefault();
-    alert("Registration successful! You can now login.");
-    const loginTab = new bootstrap.Tab(document.querySelector('#login-tab'));
-    loginTab.show();
+    window.location.href = "index.html";
   });
 </script>
 
